--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "rm -rf dist && tsc && cp package.json *.md dist && rm -rf dist/test",
     "lint": "eslint .",
     "prettier": "prettier -w .",
-    "sync": "curl -X PUT 'https://npm.taobao.org/sync/coa?sync_upstream=true'"
+    "sync": "curl -X PUT 'https://npm.taobao.org/sync/coa-wx-mp?sync_upstream=true'"
   },
   "devDependencies": {
     "@types/node": "^16.7.1",
